Bug 1511506 - Fix dropdown list button image issue where it overlaps the flex item label for RTL. r=gl
Differential Revision: https://phabricator.services.mozilla.com/D14479

UltraBlame original commit: 0b1e3a8cb09c0dcbba2e515b776cb977bca34307

--- a/devtools/client/themes/toolbars.css
+++ b/devtools/client/themes/toolbars.css
@@ -1627,6 +1627,31 @@ properties
 fill
 ;
 }
+html
+[
+dir
+=
+"
+rtl
+"
+]
+.
+devtools
+-
+dropdown
+-
+button
+{
+background
+-
+position
+:
+left
+center
+!
+important
+;
+}
 .
 devtools
 -
